Add second job to workflow for goodbye message

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,14 @@
 name: Hello
-on: workflow_dispatch
+on:
+  workflow_dispatch
 jobs:
   say-hi:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello, GitHub Actions!"
+
+  say-bye:
+    needs: say-hi
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Bye, GitHub Actions!"
